--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,10 @@
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "dist",
+        "env": {
+          "NODE_VERSION": "18.x"
+        }
       }
     }
   ],
